@@ -294,8 +294,10 @@ function initKeysPanel(pCallBack){
     for(var i = 1; i <= 8; i++){
         var lButton         = 'f' + i,
             lEl             = DOM.getById('f' + i);
-        
-        DOM.addClickListener(lFuncs[i], lEl);
+        if( i === 3 || i === 4)
+            DOM.addOneTimeListener('click', lFuncs[i], lEl);
+        else
+            DOM.addClickListener(lFuncs[i], lEl);
         lKeysPanel[lButton] = lEl;
     }
     
