@@ -894,7 +894,8 @@ var CloudCommander, Util,
             DOM.hide(lLoadingImage);
             
             Util.log(lText);
-            alert(lText);
+            
+            setTimeout( Util.retExec(alert, lText), 100);
         }
     };
     
