@@ -147,8 +147,8 @@ var CloudCommander, Util, DOM, CloudFunc, $;
         };
         
         /* добавляем обработчик клавишь */
-        DOM.addKeyListener(lKeyListener);
-            //.setButtonKey('f3', lView);
+        DOM.addKeyListener(lKeyListener)
+            .setButtonKey('f3', lView);
     };
     
     CloudCmd.Viewer.FancyBox            = FancyBox;
