@@ -15,6 +15,8 @@ and get them out to file system.
 
 * jquery updated to v1.9.1.
 
+* Fixed bug with multiple click events on f3 and f4 buttons.
+
 
 2012.03.01, Version 0.1.9
 
